# pdf-translator

./: .codex-review-prompt.txt  .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-docker.yml
.omx/: metrics.json
.omx/logs/: hooks-2026-03-26.jsonl  turns-2026-03-26.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  skill-active-state.json  tmux-hook-state.json
.superpowers/brainstorm/41547-1775046666/content/: architecture-overview.html  layout-improvement.html  web-ui-mockup.html
.superpowers/brainstorm/41547-1775046666/state/: server-info  server-stopped
docs/superpowers/plans/: 2026-03-27-pdf-translator.md  2026-04-01-phase1-foundation.md  2026-04-01-phase2-core-features.md  2026-04-01-phase3-ocr.md  2026-04-01-phase4-web-ui.md  2026-04-02-installation-convenience.md  2026-04-03-llm-layout-qa.md
docs/superpowers/specs/: 2026-04-01-pdf-translator-v2-design.md  2026-04-02-installation-convenience-design.md  2026-04-03-llm-layout-qa-design.md
pdf_translator/: __init__.py  cache.py  chunker.py  cli.py  config.py  extractor.py  md_builder.py  pdf_builder.py  translator.py
pdf_translator/cli/: main.py
pdf_translator/core/: __init__.py  cache.py  chunker.py  compare.py  config.py  draft.py  extractor.py  glossary.py  md_builder.py  md_extractor.py  md_translator.py  pdf_builder.py  qa.py
pdf_translator/core/translator/: __init__.py  base.py  router.py
pdf_translator/core/translator/backends/: __init__.py  anthropic_api.py  claude_cli.py  codex_cli.py  gemini_cli.py  google_api.py  google_translate.py  openai_api.py  openrouter_api.py
pdf_translator/data/glossaries/: cs-general.csv  finance.csv  legal.csv  medical.csv  ml-ai.csv
pdf_translator/java/: PdfBuilder.java
pdf_translator/ocr/: __init__.py  base.py  detector.py  surya_engine.py  tesseract_engine.py
pdf_translator/web/: app.py  models.py
pdf_translator/web/frontend/: package-lock.json
pdf_translator/web/frontend/src/: App.tsx  api.ts  types.ts
pdf_translator/web/frontend/src/components/: GlossaryPanel.tsx  PageNav.tsx  PdfViewer.tsx  SegmentEditor.tsx  StatusBar.tsx  TranslatedPanel.tsx
pdf_translator/web/frontend/src/hooks/: useWebSocket.ts
pdf_translator/web/frontend/src/pages/: ProjectList.tsx  TranslationView.tsx
scripts/: check_deps.py  install.sh
scripts/homebrew/: pdf-translator.rb
tests/: test_backend_anthropic.py  test_backend_claude.py  test_backend_codex.py  test_backend_gemini.py  test_backend_google.py  test_backend_google_api.py  test_backend_openai.py  test_backend_openrouter.py  test_backend_protocol.py  test_cache.py  test_chunker.py  test_cli.py  test_compare.py  test_config.py  test_draft.py  test_e2e_translate.py  test_extractor.py  test_extractor_table.py  test_glossary.py  test_integration.py  test_md_builder.py  test_ocr_base.py  test_ocr_integration.py  test_ocr_surya.py  test_ocr_tesseract.py  test_pdf_builder.py  test_pdf_builder_v2.py  test_public_api.py  test_qa.py  test_router.py  test_translate_all.py  test_translator.py  test_web_api.py
