[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-translator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "opendataloader-pdf>=0.3",
    "PyMuPDF>=1.24",
    "rich>=13.0",
]

[project.scripts]
pdf-translator = "pdf_translator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
