[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-translator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "opendataloader-pdf>=0.3",
    "PyMuPDF>=1.24",
    "rich>=13.0",
    "langdetect>=1.0.9",
    "deep-translator>=1.11",
    "requests>=2.28",
]

[project.optional-dependencies]
web = ["fastapi>=0.100", "uvicorn>=0.20", "python-multipart>=0.0.6"]
ocr = ["surya-ocr>=0.4", "pytesseract>=0.3", "Pillow>=10.0"]
all = ["pdf-translator[web]", "pdf-translator[ocr]"]

[project.scripts]
pdf-translator = "pdf_translator.cli.main:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
