[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-translator"
version = "0.7.2"
description = "Translate PDF documents with pluggable LLM backends, preserving original layout"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Hyun-Gyu Kim"}]
keywords = ["pdf", "translation", "llm", "ocr", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "opendataloader-pdf>=0.3",
    "pypdf>=4.0",
    "reportlab>=4.0",
    "rich>=13.0",
    "langdetect>=1.0.9",
    "deep-translator>=1.11",
    "requests>=2.28",
]

[project.optional-dependencies]
ocr = ["pytesseract>=0.3", "Pillow>=10.0", "pypdfium2>=4.0"]
ocr-surya = ["pdf-translator[ocr]", "surya-ocr>=0.4"]
web = ["fastapi>=0.100", "uvicorn>=0.20", "python-multipart>=0.0.6"]
all = ["pdf-translator[ocr]", "pdf-translator[web]"]
all-surya = ["pdf-translator[all]", "surya-ocr>=0.4"]

[project.scripts]
pdf-translator = "pdf_translator.cli.main:main"

[project.urls]
Homepage = "https://github.com/babyworm/pdf-translator"
Repository = "https://github.com/babyworm/pdf-translator"
Issues = "https://github.com/babyworm/pdf-translator/issues"

[tool.setuptools.packages.find]
include = ["pdf_translator*"]

[tool.setuptools.package-data]
"pdf_translator" = ["data/glossaries/*.csv", "web/frontend/dist/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
